[tool.poetry]
name = "epic"
version = "0.1.0"
description = ""
authors = ["Tejeshwar <tejeshwarreddy25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
